--- a/library_res/src/main/res/values/strings.xml
+++ b/library_res/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!--StringFormat-->
     <string name="format_money">¥ %s</string>
+    <!--imageView 默认描述-->
+    <string name="image_description_back">返回</string>
+    <string name="image_description_default">图片</string>
 </resources>
