接口调试： 订单列表接口 订单详情接口

--- a/module_order/src/main/res/values/strings.xml
+++ b/module_order/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="order_format_earndiamond">%s枚</string>
     <string name="order_format_ordernum">订单编号：%s</string>
     <string name="order_format_purchasequantity">X%s</string>
+    <string name="order_format_purchasequantity_int">X%d</string>
     <string name="order_format_totalamount">¥ %s</string>
 
     <!--error-->
