--- a/library_base/src/main/res/values/strings.xml
+++ b/library_base/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">library_base</string>
 
-    <string name="dialog_loading">请稍等</string>
+    <string name="dialog_loading">请稍等...</string>
 
 </resources>
