接口调试： 购物车接口 订单接口

--- a/library_res/src/main/res/values/strings.xml
+++ b/library_res/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">library_res</string>
 
+    <!--特殊符号-->
+    <string name="symbol_comma">&#044;</string>
+
     <!--StringFormat-->
     <string name="format_money">¥ %s</string>
     <!--imageView 默认描述-->
