初步完成我的模块新增UI绘制

--- a/library_res/src/main/res/values/strings.xml
+++ b/library_res/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <!--imageView 默认描述-->
     <string name="image_description_back">返回</string>
     <string name="image_description_default">图片</string>
+    <string name="confirm">确认</string>
 </resources>
