1.完善UI 2.部分接口调试

--- a/module_backstage/src/main/res/values/strings.xml
+++ b/module_backstage/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="back_7th_member_added">7日新增会员</string>
     <string name="back_fan_manage">粉丝管理</string>
     <string name="back_bill">账单</string>
+    <string name="back_my_backstage">我的后台</string>
 </resources>
