--- a/module_system/src/main/res/values/strings.xml
+++ b/module_system/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="system_10000">10000</string>
     <string name="system_ellipsis">...</string>
     <string name="system_default_error">没有数据</string>
+    <string name="system_feedback_input_hint">请输入你的建议吧</string>
 </resources>
