--- a/module_goods/src/main/res/values/strings.xml
+++ b/module_goods/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="goods_name">module_goods</string>
+    <!--format-->
+    <string name="goods_format_product_inventory">库存%d件</string>
 
     <!--tip-->
     <string name="goods_tip_add2shoppingcart">添加购物车成功！</string>
@@ -11,4 +13,8 @@
     <string name="goods_detail_confirmpurchase">确认购买</string>
     <string name="goods_detail_addshoppingcart">加入购物车</string>
     <string name="goods_detail_paynow">立即支付</string>
+
+    <string name="goods_product_category">产品分类</string>
+    <string name="goods_product_buynum">购买数量</string>
+    <string name="goods_product_sure">确定</string>
 </resources>
